2025-09-15T00:55:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17719132703 # 767
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-15
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 628 1022 / 640 1034
* notice: next accum: outdated-unq outdated-all / unq all: 629 1023 / 641 1035
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-31] / [2025-09-14]

2025-09-14T00:55:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17704263712 # 766
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-14
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 627 1021 / 640 1034
* notice: next accum: outdated-unq outdated-all / unq all: 628 1022 / 640 1034
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-30] / []

2025-09-13T00:47:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17689286871 # 765
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-13
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 626 1020 / 639 1033
* notice: next accum: outdated-unq outdated-all / unq all: 627 1021 / 640 1034
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-29] / [2025-09-12]

2025-09-12T00:50:18Z: