@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-15T00:55:37Z",
-  "count_outdated" : 1023,
-  "uniques_outdated" : 629,
-  "count" : 1035,
-  "uniques" : 641,
+  "timestamp" : "2025-09-16T00:50:55Z",
+  "count_outdated" : 1024,
+  "uniques_outdated" : 630,
+  "count" : 1036,
+  "uniques" : 642,
   "clones" : [
-    {
-      "timestamp": "2025-09-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-02T00:00:00Z",
       "count": 1,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-09-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
