@@ -1,12 +1,7 @@
 {
   "count": 12,
-  "uniques": 3,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2025-09-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-09-02T00:00:00Z",
       "count": 1,
@@ -59,6 +54,11 @@
     },
     {
       "timestamp": "2025-09-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-09-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
