@@ -1,3 +1,12 @@
+2025-09-16T00:50:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17750899138 # 768
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-16
+* notice: last 14d: unq all: 2 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 629 1023 / 641 1035
+* notice: next accum: outdated-unq outdated-all / unq all: 630 1024 / 642 1036
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-09-01] / [2025-09-15]
+
 2025-09-15T00:55:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17719132703 # 767
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-15
